# operations-debs-contenttranslation-apertium-sv-da

./: ACKNOWLEDGEMENTS  AUTHORS  ChangeLog  Makefile.am  README  TODO  apertium-sv-da.da-sv.t1x  apertium-sv-da.da.dix  apertium-sv-da.da.tsx  apertium-sv-da.da_old.tsx  apertium-sv-da.sv-da.dix  apertium-sv-da.sv-da.t1x  apertium-sv-da.sv.dix  apertium-sv-da_0.5.1+svn~57989.orig.tar.gz.delta  apertium-sv-da_0.5.1+svn~57989.orig.tar.gz.id  configure.ac  da-sv.prob  missing_in_tsx-file.txt  modes.xml  release_statement.txt  sv-da-unsupervised.make  sv-da.prob.old  taggerLabels.sv  testcorpus_da-sv.sh  testcorpus_sv-da.sh
debian/: changelog
dev/: DA-SV.WORDS.txt  PTAdditionsTo.sv.dix  apertium-is-sv.sv.dix.marked  apertium-sv-da.da.dix-OLD  apertium-sv-da.da.dix-mergeleftover  apertium-sv-da.da.dix.INFREQ  apertium-sv-da.sv.dix.INFREQ  apertium-sv-da.sv.dix.merged  bidix-noun-update-gender.py  bidix-remove-i.py  comb.da.dix  dictionary-coverager.py  dictionary-trimmer.py  dublet_flexion  dublet_flexion.new  europarl-bidix.xml  europarl-bidix_cleaned.xml  evaluate-noun-list.py  fast-cov.pl  inconsistencies  inconsistency.sh  list-adjectives-paradigms.sh  lt-expand-grep.sh  noun-paradigms.extract  parseparadigms.py  print-lemmas-not-in-comb.pl  proc-wordlist-into-bidix.py  remove-duplicate-lines.py  remove-duplicate-noun-lines.py  rm-dup-lm.pl  status.txt  sv-da-no.words.txt  testvoc-summary.da-sv.txt  testvoc-summary.sv-da.txt  testvoc.sh
dev/saldo/: saldo.nouns-added-130218.dix  saldo.nouns-already-added.dix  saldo.nouns.dix
doc/: apertium-dansk-dkuug-artikel-af-Jacob_Nordfalk.odt
doc/freerbmt09_svda/: Makefile  NOTES  freerbmt09svda.bib  freerbmt09svda.tex
doc/freerbmt09_svda/eval/: apertium.da.txt  google-postedited.da.txt  google.da.txt  gramtrans.da.txt  original.sv.txt  postedited.da.txt  sentences.txt
